2004-12-24 Tiago Cogumbreiro <cogumbreiro@users.sf.net>

	*__init__.py: (Serpentine.burn): Now the space left on the cache location
	is checked before starting the burning procedure.
	
=== 0.3 ===

2004-12-24 Tiago Cogumbreiro <cogumbreiro@users.sf.net>

	* serpentine:
	A new relocable script for running Serpentine.
	
	* __init__.py: serpentine_shell.py was renamed to __init__.py.
	There is no mastering object sent through argument, one is constructed
	inside. data_dir is sent through argument and fed to RecordingPreferences.
	About dialog was implemented. Changed the default size to 450x350.
	
	* preferences.py:
	the releases file will have the version.
	
2004-12-23 Tiago Cogumbreiro <cogumbreiro@users.sf.net>

	* preferences.py:
	Directory browsing button now works.
	
	* serpentine_shell.py:
	(MainWindow.burn): Now check if the temporary directory is available.
	
	* gaw.py:
	(Data.__set_data): forgot pass the gconf key as an argument.
	
2004-12-22 Tiago Cogumbreiro <cogumbreiro@users.sf.net>

	* mastering.py:
	ErrorTrapper, class used to show an error message showing which files were
	not added.
	(AddFile.on_finished): now this operation returns the same success value as
	the metadata fetching operation.
	(AudioMastering.add_file), (AudioMastering.add_files):
	Uses ErrorTrapper.

	* audio.py:
	(AudioMetadata):
	Now returns the correct operation success value.
	
	* serpentine_shell.py:
	Removed the file dialog title for HIG compliance.
	
	* gtk_util.py:
	New function to show error dialogs: dialog_error
	(hig_alert):
	Removed title and corrected image alignment for HIG compliance.
	(dialog_warn): Changed the button from OK to Close, for HIG compliance.
	
	* operations.py:
	(OperationsQueue):
	Adds support for queues that do not abort on an operation error.
	
	* recording.py:
	* serpentine_shell.py:
	Moved RecordingMedia class to recording.py
	
	* recording.py:
	(RecordMusicList.stop):
	Canceling a recording operation now works.
	(RecordMusicList.__insert_cd):