@@ -1,4 +1,4 @@
-- Make list items moveable (they do not hcange positions): TreeView DND is apparently bugged (at least 2.4.0)
+- Make list items reorderable (they do not hcange positions): TreeView DND is apparently bugged (at least 2.4.0)
 - check for temp size and verify perms
 - when u have a rw cd it doesn't ask if u want to clean it first (done but should be moved to ncb instead)
 - serpentine_shell.py needs looove!
@@ -8,5 +8,4 @@
   * check if user has a blank cd or a cdrw
 - gtk_util.HigProgress should be visible in taskbar, not have a parent and be
   minizable
-- add gconf entries
 - handle adding operations in a queue when it's already running
