@@ -1,3 +1,12 @@
+2004-12-25 Tiago Cogumbreiro <cogumbreiro@users.sf.net>
+
+	* mastering.py: recording.py: __init__.py: serpentine.glade:
+	Added main window on dialogs as parent and ensure they are centered on
+	parent for HIG compliance.
+
+	* gtk_util.py: new function get_root_parent, returns the parent window on
+	contained widgets.
+	
 2004-12-24 Tiago Cogumbreiro <cogumbreiro@users.sf.net>
 
 	*__init__.py: (Serpentine.burn): Now the space left on the cache location
